--- a/app/netlify.toml
+++ b/app/netlify.toml
@@ -1,7 +1,7 @@
 # example netlify.toml
 [build]
   command = "gatsby build"
-  functions = "functions"
+  functions = "lambda"
   publish = "public"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app. 
