--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "apollo-server-lambda": "^2.9.3",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "gatsby": "^2.13.62",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-manifest": "^2.2.4",
