--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "apollo-server-lambda": "^2.9.3",
+    "babel-plugin-styled-components": "^1.10.6",
     "bcryptjs": "^2.4.3",
     "gatsby": "^2.13.62",
     "gatsby-image": "^2.2.6",
@@ -19,6 +20,7 @@
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-styled-components": "^3.1.6",
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-source-sanity": "^5.0.1",
     "gatsby-transformer-sharp": "^2.2.4",
@@ -33,7 +35,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "rebass": "^3.1.2",
-    "styled-components": "^4.3.2",
+    "styled-components": "^4.4.0",
     "styled-system": "^5.0.18"
   },
   "devDependencies": {
