--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-intersection-observer": "^8.24.2",
     "rebass": "^4.0.6",
     "styled-components": "^4.4.0",
     "styled-system": "^5.0.18"
