--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.24.2",
-    "rebass": "^4.0.6",
-    "styled-components": "^4.4.0",
-    "styled-system": "^5.0.18"
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
