Fix styles and add internal / all posts with link

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "graphql-tag": "^2.10.1",
     "grommet": "^2.7.6",
     "grommet-icons": "^4.3.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
