--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.62",
     "gatsby-image": "^2.2.6",
+    "gatsby-plugin-google-analytics": "^2.1.37",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
